--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,55 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.wrapper {
+    height: 100vh;
+    background-color: rgb(3, 213, 143);
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .slider-container {
+    width: 50%;
+    height: 40%;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+    box-shadow: 0 0 7px 1px #333;
+  }
+  
+  .left {
+    width: 20%;
+    height: 70%;
+  }
+  
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .slide {
+    display: none;
+  }
+  
+  .active {
+    display: block;
+  }
+  
+  .arrow-left {
+    color: azure;
+    position: absolute;
+    z-index: 1;
+    top: 150px;
+    left: 0px;
+  }
+  
+  .arrow-right {
+    color: azure;
+    position: absolute;
+    z-index: 1;
+    top: 150px;
+    right: 0px;
+  }
