--- a/css/style.css
+++ b/css/style.css
@@ -4,54 +4,74 @@
     box-sizing: border-box;
 }
 
-.wrapper {
-    height: 100vh;
-    background-color: rgb(3, 213, 143);
-  
+.container{
     display: flex;
-    justify-content: center;
     align-items: center;
-  }
-  
-  .slider-container {
-    width: 50%;
-    height: 40%;
-    position: relative;
-    z-index: 0;
-    overflow: hidden;
-    box-shadow: 0 0 7px 1px #333;
-  }
-  
-  .left {
-    width: 20%;
+    justify-content: center;
+    height: 100vh;
+}
+
+.carousel{
+    width: 80%;
     height: 70%;
-  }
-  
-  img {
+}
+
+.element-container{
+    position: relative;
+    height: 100%;
+}
+
+.element{
+    display: none;
+    height: 100%;
+    text-align: center;
+}
+
+.element img{
     width: 100%;
     height: 100%;
-  }
-  
-  .slide {
-    display: none;
-  }
-  
-  .active {
+}
+
+.active{
     display: block;
-  }
-  
-  .arrow-left {
+}
+
+.hidden{
+    display: none;
+}
+
+.title{
+    color: rgb(228, 27, 27);
+    font-size: 25px;
+    font-weight: bold;
+    position: relative;
+    bottom: 60px;
+}
+
+.description{
+    color: white;
+    font-size: 18px;
+    position: relative;
+    bottom: 60px;
+}
+
+.fa-solid {
     color: azure;
+    padding: 7px;
+    font-size: 50px;
+    cursor: pointer;
+}
+
+.next{
     position: absolute;
     z-index: 1;
-    top: 150px;
+    top: 300px;
     left: 0px;
-  }
-  
-  .arrow-right {
-    color: azure;
+}
+
+.back{
     position: absolute;
     z-index: 1;
-    top: 150px;
+    top: 300px;
     right: 0px;
-  }
+}
